home page overflow bug fixed

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -9,6 +9,10 @@ body {
   // background: #ece9e6;
   // background: -webkit-linear-gradient(to right, #ffffff, #ece9e6);
   // background: linear-gradient(to right, #ffffff, #ece9e6);
+  // overflow-x: hidden;
+}
+section {
+  overflow: hidden;
 }
 
 code {
