--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -83,6 +83,7 @@
 
 @media (max-width: 992px) {
   .hero {
+    height: 60vh;
     &__wrapper {
       padding: 0;
     }
